(library
 (name path_normalization)
 (package fpath-base-dev)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0)
 (libraries fpath fpath_sexp0)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))

(rule
 (target path-normalization.md.gen)
 (package fpath-base-dev)
 (deps path_normalization.ml)
 (action
  (with-stdout-to
   %{target}
   (run mdexp pp %{deps}))))

(rule
 (package fpath-base-dev)
 (alias runtest)
 (action
  (diff path-normalization.md path-normalization.md.gen)))
